<resources>
    <string name="app_name">ToDoMobile</string>
    <string name="task_name">[Task Name]</string>
    <string name="todo_app">
        To Do is your daily
        to-do-list application!
    </string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="have_acc">Have an account? Login now!</string>
    <string name="not_registered">Need account? Register now!</string>
    <string name="welcome_text">Welcome To Do!</string>
    <string name="task_desc">[Task Desc]</string>
    <string name="task_date">[Task Date]</string>
    <string name="pick_date">Pick Date</string>
    <string name="pick_time">Pick Time</string>
    <string name="save_changes">Save Changes</string>
    <string name="profile">User Profile</string>
    <string name="change_pwd">Change Password</string>
    <string name="old_pwd">Old Password</string>
    <string name="new_pwd">New Password</string>
</resources>