<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".AddTaskActivity">

    <EditText
        android:id="@+id/editTask_et_taskName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:textSize="50sp" />

    <EditText
        android:id="@+id/editTask_et_taskDesc"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/border"
        android:gravity="top"
        android:hint="Task description..."
        android:inputType="text|textMultiLine"
        android:padding="10dp" />

    <TextView
        android:id="@+id/editTask_tv_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:padding="10dp"
        android:text="@string/pick_date"
        android:textAlignment="center"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/editTask_tv_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/pick_time"
        android:textAlignment="center"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/editTask_btn_saveChanges"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/save_changes" />

    </RelativeLayout>

</LinearLayout>